--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 .idea
+
+# Packages
+*.egg
+*.egg-info
+dist
+/build/
+eggs
+parts
+bin
+develop-eggs
+.installed.cfg
+scratch
+env
+venv*
+
+# Installer logs
+pip-log.txt
+
+
+# PyEnv
+.python-version
+
